--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-react": "^7.31.7"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4"
+    "@material-ui/core": "^4.12.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
